# trtc

python3/: README.adoc  README.adoc~
python3/trtc/: __init__.py  canvas.py  ch1_game.py  ch2_game.py  tuples.py  tuples.py~  util.py
python3/trtc/features/: canvas.feature  tuples.feature  tuples.feature~
python3/trtc/features/steps/: canvas_steps.py  tuples_steps.py  tuples_steps.py~
python3/trtc/tests/features/: TrtcTuple.feature  tuple.feature
rust/trtc/: Cargo.toml
rust/trtc/features/: tuples.feature
rust/trtc/src/: lib.rs
rust/trtc/tests/: tuples.rs
